2005-09-24  Marcus Meissner  <marcus@jet.franken.de>

	* README: Added Copyrights Marcus & Hubert
		  Added documentation URLs.

2005-08-11  Hubert Figuiere  <hfiguiere@teaser.fr>

	* library.c: Added Coolpix 5600.

2005-08-07  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Added Kodak C340 (mail by Maurizio Daniele <hayabusa@portalis.it>)

2005-07-31  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Added Coolpix 5900 
	  https://sourceforge.net/tracker/?func=detail&atid=358874&aid=1248287&group_id=8874

2005-07-19  Marcus Meissner  <marcus@jet.franken.de>

	From Vince Vegard <vegard@engen.priv.no>:
	* library.c, ptp.c, ptp.h:

	  Implemented Nikon Curve download.

	* library.c: Added Nikon Coolpix 5200.

	* library.c: PTP is class 6, subclass 1, protocol 1.


2005-07-19  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Use params everywhere.

	  Enhance errorhandling to report errors only for
	  the correct vendor.

	  Completed Canon theme download, but disabled.
	
2005-07-14  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Added GX 8 in ptp mode.

2005-07-08  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Borrowed a Nikon D70 for a day
	  (thanks AJ!) and implemented:

	  F-Number, Focal Length, Exposure Metering Mode,
	  Focus Metering Mode, Flash Mode, Exposure Time,
	  Exposure Program Mode, Exposure Index (ISO),
	  Still Capture Mode, AF Illumination (dont know what
	  this is), AF Beep Mode.

2005-07-07  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Moved one Olympus product id to sierra
	  driver where it belongs.

2005-05-25  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Hub reverted the Kodak LS473 -> 743 change,
	  corrected again.

	* library.c: Eos Mark II D has root bug too.

2005-05-14  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added a /special folder for camera specific
	  non ptp filesystem data.

	  (Canon: theme data, Nikon: Whitebalance Curve, etc.)
