@@ -1,3 +1,9 @@
+2005-10-13  Marcus Meissner  <marcus@jet.franken.de>
+	
+	* Added iRiver T10.
+	  This is an MTP device, but the user reported being able to
+	  browse the filesystem and to download stuff.
+
 2005-09-24  Marcus Meissner  <marcus@jet.franken.de>
 
 	* README: Added Copyrights Marcus & Hubert
